--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,5 +1,10 @@
 html, body {
     margin: 0;
     padding: 0;
-    height: 100%
+    height: 100%;
+    min-height: 100%
+}
+
+#root {
+    height: 100%;
 }
