--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,8 +1,16 @@
+html {
+    min-height: 100%;
+    background: #f4f6ff;
+}
+
+body {
+    min-height: 100vh;
+}
+
 html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    min-height: 100%
 }
 
 #root {
